--- a/templates/todo/tag_list.html
+++ b/templates/todo/tag_list.html
@@ -18,13 +18,14 @@
                 <tr>
                     <td>{{ tag.name }}</td>
                     <td>
-                        <button style="background: gray" class="btn"><a role="button" style="color: white"
-                                                                        href="{% url 'todo:task_change_status' pk=tag.id %}">Update</a>
+                        <!-- Для "Update" нужно изменить ссылки на их обработку в атрибуте href. Вместо ссылки на task_change_status нужно использовать ссылку на tag-update-->
+                        <button style="background: gray" class="btn"><a role="button" style="color: white" href="{% url 'todo:tag-update' pk=tag.id %}">Update</a>
                         </button>
                     </td>
                     <td>
-                        <button style="background: gray" class="btn"><a role="button" style="color: white"
-                                                                        href="{% url 'todo:task_change_status' pk=tag.id %}">Delete</a>
+                        <!-- Аналогично меняем task_change_status на tag-delete в следующей строке -->
+                        <button style="background: gray" class="btn"><a role="button" style="color: white" href="{% url 'todo:tag-delete' pk=tag.id %}">Delete</a>
+
                         </button>
                     </td>
 
